pybash/pybash/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> expression
Rule 1     term -> TERM
Rule 2     assignment -> ASSIGNMENT
Rule 3     expression -> expression term
Rule 4     expression -> term
Rule 5     expression -> assignment

Terminals, with rules where they appear

ASSIGNMENT           : 2
TERM                 : 1
error                : 

Nonterminals, with rules where they appear

assignment           : 5
expression           : 3 0
term                 : 3 4

Parsing method: LALR

state 0

    (0) S' -> . expression
    (3) expression -> . expression term
    (4) expression -> . term
    (5) expression -> . assignment
    (1) term -> . TERM
    (2) assignment -> . ASSIGNMENT

    TERM            shift and go to state 4
    ASSIGNMENT      shift and go to state 5

    expression                     shift and go to state 1
    term                           shift and go to state 2
    assignment                     shift and go to state 3

state 1

    (0) S' -> expression .
    (3) expression -> expression . term
    (1) term -> . TERM

    TERM            shift and go to state 4

    term                           shift and go to state 6

state 2

    (4) expression -> term .

    TERM            reduce using rule 4 (expression -> term .)
    $end            reduce using rule 4 (expression -> term .)


state 3

    (5) expression -> assignment .

    TERM            reduce using rule 5 (expression -> assignment .)
    $end            reduce using rule 5 (expression -> assignment .)


state 4

    (1) term -> TERM .

    TERM            reduce using rule 1 (term -> TERM .)
    $end            reduce using rule 1 (term -> TERM .)


state 5

    (2) assignment -> ASSIGNMENT .

    TERM            reduce using rule 2 (assignment -> ASSIGNMENT .)
    $end            reduce using rule 2 (assignment -> ASSIGNMENT .)


state 6

    (3) expression -> expression term .

    TERM            reduce using rule 3 (expression -> expression term .)
    $end            reduce using rule 3 (expression -> expression term .)

